--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,12 @@
 		<link rel="stylesheet" href="./assets/tailwind.css?<?php echo date('Ymdhis'); ?>" />
 	</head>
 	<body>
-		<h1 class="mb-10 mt-10 py-20 text-2xl text-red-300"><?php echo '出会いサーチ'; ?>出会いサーチ</h1>
+		<h1 class="mb-10 mt-10 bg-blue-300 py-20 text-2xl text-red-300"><?php echo '出会いサーチ'; ?>出会いサーチ</h1>
 		<div class="mx-auto items-center px-4 py-20 font-bold md:flex md:py-40">テストてすとテストてすと</div>
+		<div>
+			<?php
+			for($i=0; $i<100; $i++){
+				echo $i . "<br>"; } ?>
+		</div>
 	</body>
 </html>
