📝 mainブランチで編集

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 ?>
 <body>
 	<h1 class="mb-10 mt-10 bg-blue-300 py-20 text-2xl text-red-800"><?php echo '出会いサーチ'; ?>出会いサーチ</h1>
-	<div class="mx-auto items-center px-4 py-20 font-bold md:flex md:py-40">テストてすとテストてすと</div>
+	<div class="mx-auto items-center bg-green-800 px-4 py-20 font-bold text-white md:flex md:py-40">テストてすとテストてすと</div>
 	<div>
 		<?php
 			for($i=0; $i<50; $i++){
