--- a/html/index.html
+++ b/html/index.html
@@ -1,15 +1,15 @@
 <?php
+//ヘッド
 	include_once('_head.php');
 ?>
-<body>
-	<h1 class="mb-10 mt-10 bg-blue-300 py-20 text-2xl text-red-800"><?php echo '出会いサーチ'; ?>出会いサーチ</h1>
-	<div class="mx-auto items-center bg-green-800 px-4 py-20 font-bold text-white md:flex md:py-40">テストてすとテストてすと</div>
-	<div>
-		<?php
-			for($i=0; $i<50; $i++){
-				echo "テスト" . $i . "<br>"; } ?>
-	</div>
-</body>
+<!-- body -->
 <?php
+//ヘッダー・メインビジュアル
+	include_once('_header.html');
+?>
+
+<!-- /body -->
+<?php
+//フッター
 	include_once('_footer.php');
 ?>
