✨ ファイル修正

--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,20 @@
 <!-- body -->
 <?php
 //ヘッダー・メインビジュアル
-	include_once('_header.html');
+	//include_once('_header.html');
 ?>
-
+<header class="header">
+	<a href="/" class="logo block">
+		<picture>
+			<source type="image/webp" srcset="./assets/images/logo.webp" />
+			<img src="./assets/images/logo.png" class="block h-7" alt="出会いサーチ" />
+		</picture>
+	</a>
+</header>
+<main class="main"></main>
+<aside class="aside"></aside>
 <!-- /body -->
 <?php
 //フッター
-	include_once('_footer.php');
+	include_once('_footer.html');
 ?>
