--- a/html/_header.html
+++ b/html/_header.html
@@ -1,3 +1,5 @@
+<?php echo '<body class="bg-gray-100">'; ?>
+<?php echo '<div class="mx-auto min-h-screen max-w-lg bg-white">'; ?>
 <header class="box-border w-full">
 	<a href="/" class="logo block">
 		<picture>
