--- a/html/_footer.html
+++ b/html/_footer.html
@@ -5,6 +5,6 @@
 <script src="./assets/deaisp.js?<?php echo date('Ymdhis'); ?>"></script>
 <?php
 	echo '</body>';
-	ehco '</html>';
+	echo '</html>';
 ?>
 
